# fontInAss

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile-builder  Dockerfile-default  Dockerfile-noproxy  Dockerfile.old  DockerfileBuild  README.MD  checkTool.py  debug.sh  default.Dockerfile  docker  test.sh  localFontMap.json  localFonts.json  main.py  makeLocalFontsMap.py  my-fontinass.xml  noproxy.Dockerfile  plan_miss_log.md  pyproject.toml  requirements.txt  run.sh  subset.py  test.result
.claude/: .fuse_hidden04aec7c90000076e
ffmpegTest/: ffmpegrender.sh  input.ass  test.py
nginx/: nginx.conf
src/: analyseAss.py  analyseAss_test.py  assSubsetter.py  colorAdjust.py  config.py  constants.py  create_onlineFonts.json.py  dirmonitor.py  docker.init.py  fontLoader.py  fontManager.py  fontmanager.py  hdrify.py  logs.py  main.py  miss_logs_db.py  sse_handler.py  subsetter.py  test.py  utils.py
test/: [DMG] 冴えない彼女の育てかた [S01E06]「二人の夜の選択肢」 [BDRip][HEVC_FLAC][1080P_Ma10P](312B5435).chs.ass  [DMG] 冴えない彼女の育てかた♭ [S02E02]「本気で本当な分岐点」 [BDRip][HEVC_FLAC][1080P_Ma10P](0C37FCAB).chs.ass  [DMG] 冴えない彼女の育てかた♭ [S02E05]「締め切りが先か、覚醒が先か」 [BDRip][HEVC_FLAC][1080P_Ma10P](AD4F76A4).chs.ass  [Haruhana] Kaoru Hana wa Rin to Saku - 01 [WebRip][HEVC-10bit 1080p][CHI_JPN].Chs&jpn.ass  [Haruhana] Kaoru Hana wa Rin to Saku - 01 [WebRip][HEVC-10bit 1080p][CHI_JPN].Cht&jpn.ass  [Ygm&MAI] JoJo's Bizarre Adventure - Stardust Crusaders [S02E47][Ma10p_2160p][x265_DTS-HDMA_ass].chs.ass  [Ygm&MAI] JoJo's Bizarre Adventure - Stone Ocean [S05E01][Ma10p_2160p][x265_flac_ass].extract.ass  subset.ass
(+48 files in other folders)
